<resources>
    <string name="app_name">Database SQLite</string>
    <string name="sqlite_intro">SQLite Intro</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="add">Add</string>
    <string name="read">Read</string>
    <string name="clear">Clear</string>
    <string name="id">ID</string>
    <string name="update">Update</string>
    <string name="delete">Delete</string>
    <string name="insert_or_delete">Insert or Delete</string>
    <string name="countries">Countries</string>
    <string name="all_notes">All notes</string>
    <string name="function">Function</string>
    <string name="people">People</string>
    <string name="population_by_region">Population by region</string>
    <string name="having">Having</string>
    <string name="region">Region</string>
    <string name="selecting">Selecting</string>
    <string name="sort">Sort</string>
    <string name="sqlite_joins">SQLite joins</string>
    <string name="transactions">Transactions</string>
    <string name="insert_transactions">Insert Transactions</string>
    <string name="time">Time:" "</string>
    <string name="insert">Insert</string>
</resources>
