<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="56dp"
    android:paddingStart="8dp"
    android:paddingEnd="8dp"
    android:paddingBottom="8dp"
    tools:context="._002_insert_or_delete.InsertOrDeleteActivity">


    <include
        android:id="@+id/name_and_email_include"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_marginTop="24dp"
        layout="@layout/activity_001_sql_lite_intro"
        app:layout_constraintTop_toBottomOf="@+id/id_text_view" />

    <TextView
        android:id="@+id/id_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/id"
        android:layout_marginStart="8dp"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/result_id_edit_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/result_id_edit_text"
        android:layout_width="72dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:layout_marginStart="8dp"
        app:layout_constraintStart_toEndOf="@+id/id_text_view"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/update_intro_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/update"
        android:layout_marginStart="8dp"
        app:layout_constraintStart_toEndOf="@+id/result_id_edit_text"
        app:layout_constraintEnd_toStartOf="@+id/delete_intro_button"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="106dp" />

    <Button
        android:id="@+id/delete_intro_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/delete"
        android:layout_marginEnd="8dp"
        app:layout_constraintStart_toEndOf="@+id/update_intro_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="151dp" />

</androidx.constraintlayout.widget.ConstraintLayout>